--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutdata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutdata.yml
@@ -1,139 +1,126 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 174dc464ee31fe45d02104d5a92af69e6536f7e7
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098675"
 items:
-- uid: excel.Excel.Interfaces.PivotLayoutData
-  summary: <span data-ttu-id="d3711-101">描述通过调用 "pivotLayout ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d3711-101">An interface describing the data returned by calling "pivotLayout.toJSON()".</span></span>
-  name: Excel.Interfaces.PivotLayoutData
-  fullName: Excel.Interfaces.PivotLayoutData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotLayoutData.autoFormat
-  - excel.Excel.Interfaces.PivotLayoutData.enableFieldList
-  - excel.Excel.Interfaces.PivotLayoutData.layoutType
-  - excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
-  - excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
-- uid: excel.Excel.Interfaces.PivotLayoutData.autoFormat
-  summary: >-
-    <span data-ttu-id="d3711-102">如果在刷新或移动域时自动设置格式设置的格式, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="d3711-102">True if formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
+  - uid: excel.Excel.Interfaces.PivotLayoutData
+    summary: <span data-ttu-id="b7118-101">描述通过调用 "pivotLayout ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b7118-101">An interface describing the data returned by calling "pivotLayout.toJSON()".</span></span>
+    name: Excel.Interfaces.PivotLayoutData
+    fullName: Excel.Interfaces.PivotLayoutData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotLayoutData.autoFormat
+      - excel.Excel.Interfaces.PivotLayoutData.enableFieldList
+      - excel.Excel.Interfaces.PivotLayoutData.layoutType
+      - excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
+      - excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
+  - uid: excel.Excel.Interfaces.PivotLayoutData.autoFormat
+    summary: |-
+      <span data-ttu-id="b7118-102">指定在刷新或移动域时是否自动设置格式设置的格式</span><span class="sxs-lookup"><span data-stu-id="b7118-102">Specifies whether formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
 
+      <span data-ttu-id="b7118-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: autoFormat
+    fullName: autoFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'autoFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.enableFieldList
+    summary: |-
+      <span data-ttu-id="b7118-104">指定字段列表是否可以显示在 UI 中。</span><span class="sxs-lookup"><span data-stu-id="b7118-104">Specifies whether the field list can be shown in the UI.</span></span>
 
-    <span data-ttu-id="d3711-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: autoFormat
-  fullName: autoFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'autoFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.enableFieldList
-  summary: >-
-    <span data-ttu-id="d3711-104">如此如果应在 UI 中显示或隐藏字段列表。</span><span class="sxs-lookup"><span data-stu-id="d3711-104">True if the field list should be shown or hidden from the UI.</span></span>
+      <span data-ttu-id="b7118-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableFieldList
+    fullName: enableFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableFieldList?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.layoutType
+    summary: |-
+      <span data-ttu-id="b7118-106">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="b7118-106">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="b7118-107">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="b7118-107">If fields have different states, this will be null.</span></span>
 
+      <span data-ttu-id="b7118-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: layoutType
+    fullName: layoutType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
+      return:
+        type:
+          - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
+  - uid: excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
+    summary: |-
+      <span data-ttu-id="b7118-109">指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时, 是否保留格式设置。</span><span class="sxs-lookup"><span data-stu-id="b7118-109">Specifies whether formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
 
-    <span data-ttu-id="d3711-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableFieldList
-  fullName: enableFieldList
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableFieldList?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.layoutType
-  summary: >-
-    <span data-ttu-id="d3711-106">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="d3711-106">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="d3711-107">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="d3711-107">If fields have different states, this will be null.</span></span>
+      <span data-ttu-id="b7118-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: preserveFormatting
+    fullName: preserveFormatting
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'preserveFormatting?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
+    summary: |-
+      <span data-ttu-id="b7118-111">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="b7118-111">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
 
+      <span data-ttu-id="b7118-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showColumnGrandTotals
+    fullName: showColumnGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showColumnGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
+    summary: |-
+      <span data-ttu-id="b7118-113">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="b7118-113">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
 
-    <span data-ttu-id="d3711-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: layoutType
-  fullName: layoutType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
-    return:
-      type:
-      - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
-- uid: excel.Excel.Interfaces.PivotLayoutData.preserveFormatting
-  summary: >-
-    <span data-ttu-id="d3711-109">如此如果通过透视、排序或更改页字段项等操作刷新或重新计算报表时保留格式。</span><span class="sxs-lookup"><span data-stu-id="d3711-109">True if formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
+      <span data-ttu-id="b7118-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showRowGrandTotals
+    fullName: showRowGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showRowGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
+    summary: |-
+      <span data-ttu-id="b7118-115">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="b7118-115">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="b7118-116">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="b7118-116">If fields have different states, this will be null.</span></span>
 
-
-    <span data-ttu-id="d3711-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: preserveFormatting
-  fullName: preserveFormatting
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'preserveFormatting?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.showColumnGrandTotals
-  summary: >-
-    <span data-ttu-id="d3711-111">如果数据透视表显示列总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="d3711-111">True if the PivotTable report shows grand totals for columns.</span></span>
-
-
-    <span data-ttu-id="d3711-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showColumnGrandTotals
-  fullName: showColumnGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showColumnGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.showRowGrandTotals
-  summary: >-
-    <span data-ttu-id="d3711-113">如果数据透视表显示行总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="d3711-113">True if the PivotTable report shows grand totals for rows.</span></span>
-
-
-    <span data-ttu-id="d3711-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showRowGrandTotals
-  fullName: showRowGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showRowGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutData.subtotalLocation
-  summary: >-
-    <span data-ttu-id="d3711-115">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="d3711-115">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="d3711-116">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="d3711-116">If fields have different states, this will be null.</span></span>
-
-
-    <span data-ttu-id="d3711-117">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d3711-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: subtotalLocation
-  fullName: subtotalLocation
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
-    return:
-      type:
-      - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
+      <span data-ttu-id="b7118-117">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b7118-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: subtotalLocation
+    fullName: subtotalLocation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
+      return:
+        type:
+          - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
