--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutloadoptions.yml
@@ -1,155 +1,141 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b3ca04efc2940499070ed5eead227f0b958fb13c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30097093"
 items:
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions
-  summary: >-
-    <span data-ttu-id="868ca-101">表示数据透视表的可视化布局。</span><span class="sxs-lookup"><span data-stu-id="868ca-101">Represents the visual layout of the PivotTable.</span></span>
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions
+    summary: |-
+      <span data-ttu-id="3b8a8-101">表示数据透视表的可视化布局。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-101">Represents the visual layout of the PivotTable.</span></span>
 
+      <span data-ttu-id="3b8a8-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.PivotLayoutLoadOptions
+    fullName: Excel.Interfaces.PivotLayoutLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.$all
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.autoFormat
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.enableFieldList
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.layoutType
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.preserveFormatting
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.showColumnGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.showRowGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutLoadOptions.subtotalLocation
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.autoFormat
+    summary: |-
+      <span data-ttu-id="3b8a8-103">指定在刷新或移动域时是否自动设置格式设置的格式</span><span class="sxs-lookup"><span data-stu-id="3b8a8-103">Specifies whether formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
 
-    <span data-ttu-id="868ca-102">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.PivotLayoutLoadOptions
-  fullName: Excel.Interfaces.PivotLayoutLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.$all
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.autoFormat
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.enableFieldList
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.layoutType
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.preserveFormatting
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.showColumnGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.showRowGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutLoadOptions.subtotalLocation
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.autoFormat
-  summary: >-
-    <span data-ttu-id="868ca-103">如果在刷新或移动域时自动设置格式设置的格式, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="868ca-103">True if formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
+      <span data-ttu-id="3b8a8-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: autoFormat
+    fullName: autoFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'autoFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.enableFieldList
+    summary: |-
+      <span data-ttu-id="3b8a8-105">指定字段列表是否可以显示在 UI 中。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-105">Specifies whether the field list can be shown in the UI.</span></span>
 
+      <span data-ttu-id="3b8a8-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableFieldList
+    fullName: enableFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableFieldList?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.layoutType
+    summary: |-
+      <span data-ttu-id="3b8a8-107">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-107">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="3b8a8-108">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-108">If fields have different states, this will be null.</span></span>
 
-    <span data-ttu-id="868ca-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: autoFormat
-  fullName: autoFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'autoFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.enableFieldList
-  summary: >-
-    <span data-ttu-id="868ca-105">如此如果应在 UI 中显示或隐藏字段列表。</span><span class="sxs-lookup"><span data-stu-id="868ca-105">True if the field list should be shown or hidden from the UI.</span></span>
+      <span data-ttu-id="3b8a8-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: layoutType
+    fullName: layoutType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layoutType?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.preserveFormatting
+    summary: |-
+      <span data-ttu-id="3b8a8-110">指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时, 是否保留格式设置。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-110">Specifies whether formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
 
+      <span data-ttu-id="3b8a8-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: preserveFormatting
+    fullName: preserveFormatting
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'preserveFormatting?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.showColumnGrandTotals
+    summary: |-
+      <span data-ttu-id="3b8a8-112">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-112">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
 
-    <span data-ttu-id="868ca-106">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-106">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableFieldList
-  fullName: enableFieldList
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableFieldList?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.layoutType
-  summary: >-
-    <span data-ttu-id="868ca-107">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="868ca-107">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="868ca-108">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="868ca-108">If fields have different states, this will be null.</span></span>
+      <span data-ttu-id="3b8a8-113">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showColumnGrandTotals
+    fullName: showColumnGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showColumnGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.showRowGrandTotals
+    summary: |-
+      <span data-ttu-id="3b8a8-114">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-114">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
 
+      <span data-ttu-id="3b8a8-115">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showRowGrandTotals
+    fullName: showRowGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showRowGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.subtotalLocation
+    summary: |-
+      <span data-ttu-id="3b8a8-116">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-116">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="3b8a8-117">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="3b8a8-117">If fields have different states, this will be null.</span></span>
 
-    <span data-ttu-id="868ca-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: layoutType
-  fullName: layoutType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layoutType?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.preserveFormatting
-  summary: >-
-    <span data-ttu-id="868ca-110">如此如果通过透视、排序或更改页字段项等操作刷新或重新计算报表时保留格式。</span><span class="sxs-lookup"><span data-stu-id="868ca-110">True if formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
-
-
-    <span data-ttu-id="868ca-111">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-111">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: preserveFormatting
-  fullName: preserveFormatting
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'preserveFormatting?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.showColumnGrandTotals
-  summary: >-
-    <span data-ttu-id="868ca-112">如果数据透视表显示列总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="868ca-112">True if the PivotTable report shows grand totals for columns.</span></span>
-
-
-    <span data-ttu-id="868ca-113">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showColumnGrandTotals
-  fullName: showColumnGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showColumnGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.showRowGrandTotals
-  summary: >-
-    <span data-ttu-id="868ca-114">如果数据透视表显示行总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="868ca-114">True if the PivotTable report shows grand totals for rows.</span></span>
-
-
-    <span data-ttu-id="868ca-115">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showRowGrandTotals
-  fullName: showRowGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showRowGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutLoadOptions.subtotalLocation
-  summary: >-
-    <span data-ttu-id="868ca-116">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="868ca-116">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="868ca-117">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="868ca-117">If fields have different states, this will be null.</span></span>
-
-
-    <span data-ttu-id="868ca-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="868ca-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: subtotalLocation
-  fullName: subtotalLocation
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subtotalLocation?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="3b8a8-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3b8a8-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: subtotalLocation
+    fullName: subtotalLocation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subtotalLocation?: boolean;'
+      return:
+        type:
+          - boolean
