--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivotlayoutupdatedata.yml
@@ -1,139 +1,126 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d1baee02977b51642cd54bfca3012e3e1e12aa35
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094762"
 items:
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData
-  summary: <span data-ttu-id="e2ec8-101">用于更新 PivotLayout 对象上的数据的接口, 用于在 "PivotLayout" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="e2ec8-101">An interface for updating data on the PivotLayout object, for use in "pivotLayout.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.PivotLayoutUpdateData
-  fullName: Excel.Interfaces.PivotLayoutUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.autoFormat
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.enableFieldList
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.layoutType
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.preserveFormatting
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.showColumnGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.showRowGrandTotals
-  - excel.Excel.Interfaces.PivotLayoutUpdateData.subtotalLocation
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.autoFormat
-  summary: >-
-    <span data-ttu-id="e2ec8-102">如果在刷新或移动域时自动设置格式设置的格式, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-102">True if formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData
+    summary: '<span data-ttu-id="89fdc-101">一个用于更新 PivotLayout 对象上的数据的接口, 可用于 "PivotLayout (</span><span class="sxs-lookup"><span data-stu-id="89fdc-101">An interface for updating data on the PivotLayout object, for use in "pivotLayout.set(</span></span><!-- --><span data-ttu-id="89fdc-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="89fdc-102"></span></span><!-- --><span data-ttu-id="89fdc-103">)".</span><span class="sxs-lookup"><span data-stu-id="89fdc-103"></span></span>'
+    name: Excel.Interfaces.PivotLayoutUpdateData
+    fullName: Excel.Interfaces.PivotLayoutUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.autoFormat
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.enableFieldList
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.layoutType
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.preserveFormatting
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.showColumnGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.showRowGrandTotals
+      - excel.Excel.Interfaces.PivotLayoutUpdateData.subtotalLocation
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.autoFormat
+    summary: |-
+      <span data-ttu-id="89fdc-104">指定在刷新或移动域时是否自动设置格式设置的格式</span><span class="sxs-lookup"><span data-stu-id="89fdc-104">Specifies whether formatting will be automatically formatted when it’s refreshed or when fields are moved</span></span>
 
+      <span data-ttu-id="89fdc-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: autoFormat
+    fullName: autoFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'autoFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.enableFieldList
+    summary: |-
+      <span data-ttu-id="89fdc-106">指定字段列表是否可以显示在 UI 中。</span><span class="sxs-lookup"><span data-stu-id="89fdc-106">Specifies whether the field list can be shown in the UI.</span></span>
 
-    <span data-ttu-id="e2ec8-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: autoFormat
-  fullName: autoFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'autoFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.enableFieldList
-  summary: >-
-    <span data-ttu-id="e2ec8-104">如此如果应在 UI 中显示或隐藏字段列表。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-104">True if the field list should be shown or hidden from the UI.</span></span>
+      <span data-ttu-id="89fdc-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableFieldList
+    fullName: enableFieldList
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableFieldList?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.layoutType
+    summary: |-
+      <span data-ttu-id="89fdc-108">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="89fdc-108">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="89fdc-109">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="89fdc-109">If fields have different states, this will be null.</span></span>
 
+      <span data-ttu-id="89fdc-110">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-110">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: layoutType
+    fullName: layoutType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
+      return:
+        type:
+          - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.preserveFormatting
+    summary: |-
+      <span data-ttu-id="89fdc-111">指定当通过透视、排序或更改页字段项等操作刷新或重新计算报表时, 是否保留格式设置。</span><span class="sxs-lookup"><span data-stu-id="89fdc-111">Specifies whether formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
 
-    <span data-ttu-id="e2ec8-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableFieldList
-  fullName: enableFieldList
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableFieldList?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.layoutType
-  summary: >-
-    <span data-ttu-id="e2ec8-106">此属性指示数据透视表上的所有字段的 PivotLayoutType。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-106">This property indicates the PivotLayoutType of all fields on the PivotTable.</span></span> <span data-ttu-id="e2ec8-107">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-107">If fields have different states, this will be null.</span></span>
+      <span data-ttu-id="89fdc-112">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-112">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: preserveFormatting
+    fullName: preserveFormatting
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'preserveFormatting?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.showColumnGrandTotals
+    summary: |-
+      <span data-ttu-id="89fdc-113">指定数据透视表报表是否显示列总计。</span><span class="sxs-lookup"><span data-stu-id="89fdc-113">Specifies whether the PivotTable report shows grand totals for columns.</span></span>
 
+      <span data-ttu-id="89fdc-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showColumnGrandTotals
+    fullName: showColumnGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showColumnGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.showRowGrandTotals
+    summary: |-
+      <span data-ttu-id="89fdc-115">指定数据透视表报表是否显示行总计。</span><span class="sxs-lookup"><span data-stu-id="89fdc-115">Specifies whether the PivotTable report shows grand totals for rows.</span></span>
 
-    <span data-ttu-id="e2ec8-108">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-108">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: layoutType
-  fullName: layoutType
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
-    return:
-      type:
-      - Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.preserveFormatting
-  summary: >-
-    <span data-ttu-id="e2ec8-109">如此如果通过透视、排序或更改页字段项等操作刷新或重新计算报表时保留格式。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-109">True if formatting is preserved when the report is refreshed or recalculated by operations such as pivoting, sorting, or changing page field items.</span></span>
+      <span data-ttu-id="89fdc-116">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-116">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showRowGrandTotals
+    fullName: showRowGrandTotals
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showRowGrandTotals?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotLayoutUpdateData.subtotalLocation
+    summary: |-
+      <span data-ttu-id="89fdc-117">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="89fdc-117">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="89fdc-118">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="89fdc-118">If fields have different states, this will be null.</span></span>
 
-
-    <span data-ttu-id="e2ec8-110">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-110">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: preserveFormatting
-  fullName: preserveFormatting
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'preserveFormatting?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.showColumnGrandTotals
-  summary: >-
-    <span data-ttu-id="e2ec8-111">如果数据透视表显示列总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-111">True if the PivotTable report shows grand totals for columns.</span></span>
-
-
-    <span data-ttu-id="e2ec8-112">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-112">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showColumnGrandTotals
-  fullName: showColumnGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showColumnGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.showRowGrandTotals
-  summary: >-
-    <span data-ttu-id="e2ec8-113">如果数据透视表显示行总计，则为 True。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-113">True if the PivotTable report shows grand totals for rows.</span></span>
-
-
-    <span data-ttu-id="e2ec8-114">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-114">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showRowGrandTotals
-  fullName: showRowGrandTotals
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showRowGrandTotals?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotLayoutUpdateData.subtotalLocation
-  summary: >-
-    <span data-ttu-id="e2ec8-115">此属性指示数据透视表上的所有字段的 SubtotalLocationType。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-115">This property indicates the SubtotalLocationType of all fields on the PivotTable.</span></span> <span data-ttu-id="e2ec8-116">如果字段状态不同，则为 null。</span><span class="sxs-lookup"><span data-stu-id="e2ec8-116">If fields have different states, this will be null.</span></span>
-
-
-    <span data-ttu-id="e2ec8-117">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e2ec8-117">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: subtotalLocation
-  fullName: subtotalLocation
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
-    return:
-      type:
-      - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
+      <span data-ttu-id="89fdc-119">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="89fdc-119">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: subtotalLocation
+    fullName: subtotalLocation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
+      return:
+        type:
+          - Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
