--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottablecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottablecollectionloadoptions.yml
@@ -1,137 +1,124 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: fd0182e8b94014a3cb1b7eedd46e2b47887b3d13
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098360"
 items:
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions
-  summary: >-
-    <span data-ttu-id="e0f3e-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions
+    summary: |-
+      <span data-ttu-id="59371-101">表示属于工作簿或工作表的所有 PivotTable 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="59371-101">Represents a collection of all the PivotTables that are part of the workbook or worksheet.</span></span>
 
+      <span data-ttu-id="59371-102">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.PivotTableCollectionLoadOptions
+    fullName: Excel.Interfaces.PivotTableCollectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.$all
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.enableDataValueEditing
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.id
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.layout
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.name
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.useCustomSortLists
+      - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.worksheet
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.enableDataValueEditing
+    summary: |-
+      <span data-ttu-id="59371-103">对于集合中的每一项: 指定数据透视表是否允许用户对数据正文中的值进行编辑。</span><span class="sxs-lookup"><span data-stu-id="59371-103">For EACH ITEM in the collection: Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
 
-    <span data-ttu-id="e0f3e-102">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.PivotTableCollectionLoadOptions
-  fullName: Excel.Interfaces.PivotTableCollectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.$all
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.enableDataValueEditing
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.id
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.layout
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.name
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.useCustomSortLists
-  - excel.Excel.Interfaces.PivotTableCollectionLoadOptions.worksheet
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.enableDataValueEditing
-  summary: >-
-    <span data-ttu-id="e0f3e-103">对于集合中的每一项: 如果数据透视表应在排序时使用自定义列表, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-103">For EACH ITEM in the collection: True if the PivotTable should use custom lists when sorting.</span></span>
+      <span data-ttu-id="59371-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableDataValueEditing
+    fullName: enableDataValueEditing
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableDataValueEditing?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.id
+    summary: |-
+      <span data-ttu-id="59371-105">对于集合中的每一项: 数据透视表的 Id。</span><span class="sxs-lookup"><span data-stu-id="59371-105">For EACH ITEM in the collection: Id of the PivotTable.</span></span> <span data-ttu-id="59371-106">只读。</span><span class="sxs-lookup"><span data-stu-id="59371-106">Read-only.</span></span>
 
+      <span data-ttu-id="59371-107">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-107">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.layout
+    summary: |-
+      <span data-ttu-id="59371-108">对于集合中的每一项: 描述数据透视表的布局和可视结构的 PivotLayout。</span><span class="sxs-lookup"><span data-stu-id="59371-108">For EACH ITEM in the collection: The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
 
-    <span data-ttu-id="e0f3e-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableDataValueEditing
-  fullName: enableDataValueEditing
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableDataValueEditing?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.id
-  summary: >-
-    <span data-ttu-id="e0f3e-105">对于集合中的每一项: 数据透视表的 Id。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-105">For EACH ITEM in the collection: Id of the PivotTable.</span></span> <span data-ttu-id="e0f3e-106">只读。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-106">Read-only.</span></span>
+      <span data-ttu-id="59371-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: layout
+    fullName: layout
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.PivotLayoutLoadOptions
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.name
+    summary: |-
+      <span data-ttu-id="59371-110">对于集合中的每一项: 数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="59371-110">For EACH ITEM in the collection: Name of the PivotTable.</span></span>
 
+      <span data-ttu-id="59371-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.useCustomSortLists
+    summary: |-
+      <span data-ttu-id="59371-112">对于集合中的每一项: 指定数据透视表在排序时是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="59371-112">For EACH ITEM in the collection: Specifies whether the PivotTable uses custom lists when sorting.</span></span>
 
-    <span data-ttu-id="e0f3e-107">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-107">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.layout
-  summary: >-
-    <span data-ttu-id="e0f3e-108">对于集合中的每一项: 描述数据透视表的布局和可视结构的 PivotLayout。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-108">For EACH ITEM in the collection: The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
+      <span data-ttu-id="59371-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: useCustomSortLists
+    fullName: useCustomSortLists
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useCustomSortLists?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.worksheet
+    summary: |-
+      <span data-ttu-id="59371-114">对于集合中的每一项: 包含当前数据透视表的工作表。</span><span class="sxs-lookup"><span data-stu-id="59371-114">For EACH ITEM in the collection: The worksheet containing the current PivotTable.</span></span>
 
-
-    <span data-ttu-id="e0f3e-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: layout
-  fullName: layout
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.PivotLayoutLoadOptions
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.name
-  summary: >-
-    <span data-ttu-id="e0f3e-110">对于集合中的每一项: 数据透视表的名称。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-110">For EACH ITEM in the collection: Name of the PivotTable.</span></span>
-
-
-    <span data-ttu-id="e0f3e-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.useCustomSortLists
-  summary: >-
-    <span data-ttu-id="e0f3e-112">对于集合中的每一项: 如果数据透视表应在排序时使用自定义列表, 则为 True。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-112">For EACH ITEM in the collection: True if the PivotTable should use custom lists when sorting.</span></span>
-
-
-    <span data-ttu-id="e0f3e-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: useCustomSortLists
-  fullName: useCustomSortLists
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'useCustomSortLists?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableCollectionLoadOptions.worksheet
-  summary: >-
-    <span data-ttu-id="e0f3e-114">对于集合中的每一项: 包含当前数据透视表的工作表。</span><span class="sxs-lookup"><span data-stu-id="e0f3e-114">For EACH ITEM in the collection: The worksheet containing the current PivotTable.</span></span>
-
-
-    <span data-ttu-id="e0f3e-115">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0f3e-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: worksheet
-  fullName: worksheet
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.WorksheetLoadOptions
+      <span data-ttu-id="59371-115">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="59371-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: worksheet
+    fullName: worksheet
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.WorksheetLoadOptions
