--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottabledata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottabledata.yml
@@ -1,172 +1,157 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8cff616b5716f68bc7c545f8afb28aba728f1978
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095658"
 items:
-- uid: excel.Excel.Interfaces.PivotTableData
-  summary: <span data-ttu-id="d58d9-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="d58d9-101">An interface describing the data returned by calling "pivotTable.toJSON()".</span></span>
-  name: Excel.Interfaces.PivotTableData
-  fullName: Excel.Interfaces.PivotTableData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableData.columnHierarchies
-  - excel.Excel.Interfaces.PivotTableData.dataHierarchies
-  - excel.Excel.Interfaces.PivotTableData.enableDataValueEditing
-  - excel.Excel.Interfaces.PivotTableData.filterHierarchies
-  - excel.Excel.Interfaces.PivotTableData.hierarchies
-  - excel.Excel.Interfaces.PivotTableData.id
-  - excel.Excel.Interfaces.PivotTableData.name
-  - excel.Excel.Interfaces.PivotTableData.rowHierarchies
-  - excel.Excel.Interfaces.PivotTableData.useCustomSortLists
-- uid: excel.Excel.Interfaces.PivotTableData.columnHierarchies
-  summary: >-
-    <span data-ttu-id="d58d9-102">数据透视表的列透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="d58d9-102">The Column Pivot Hierarchies of the PivotTable.</span></span>
+  - uid: excel.Excel.Interfaces.PivotTableData
+    summary: <span data-ttu-id="e41a1-101">描述通过调用 "toJSON ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="e41a1-101">An interface describing the data returned by calling "pivotTable.toJSON()".</span></span>
+    name: Excel.Interfaces.PivotTableData
+    fullName: Excel.Interfaces.PivotTableData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableData.columnHierarchies
+      - excel.Excel.Interfaces.PivotTableData.dataHierarchies
+      - excel.Excel.Interfaces.PivotTableData.enableDataValueEditing
+      - excel.Excel.Interfaces.PivotTableData.filterHierarchies
+      - excel.Excel.Interfaces.PivotTableData.hierarchies
+      - excel.Excel.Interfaces.PivotTableData.id
+      - excel.Excel.Interfaces.PivotTableData.name
+      - excel.Excel.Interfaces.PivotTableData.rowHierarchies
+      - excel.Excel.Interfaces.PivotTableData.useCustomSortLists
+  - uid: excel.Excel.Interfaces.PivotTableData.columnHierarchies
+    summary: |-
+      <span data-ttu-id="e41a1-102">数据透视表的列透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="e41a1-102">The Column Pivot Hierarchies of the PivotTable.</span></span>
 
+      <span data-ttu-id="e41a1-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: columnHierarchies
+    fullName: columnHierarchies
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'columnHierarchies?: Excel.Interfaces.RowColumnPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.RowColumnPivotHierarchyData[]'
+  - uid: excel.Excel.Interfaces.PivotTableData.dataHierarchies
+    summary: |-
+      <span data-ttu-id="e41a1-104">数据透视表的数据透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="e41a1-104">The Data Pivot Hierarchies of the PivotTable.</span></span>
 
-    <span data-ttu-id="d58d9-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: columnHierarchies
-  fullName: columnHierarchies
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'columnHierarchies?: Excel.Interfaces.RowColumnPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.RowColumnPivotHierarchyData[]
-- uid: excel.Excel.Interfaces.PivotTableData.dataHierarchies
-  summary: >-
-    <span data-ttu-id="d58d9-104">数据透视表的数据透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="d58d9-104">The Data Pivot Hierarchies of the PivotTable.</span></span>
+      <span data-ttu-id="e41a1-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: dataHierarchies
+    fullName: dataHierarchies
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'dataHierarchies?: Excel.Interfaces.DataPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.DataPivotHierarchyData[]'
+  - uid: excel.Excel.Interfaces.PivotTableData.enableDataValueEditing
+    summary: |-
+      <span data-ttu-id="e41a1-106">指定数据透视表是否允许用户对数据正文中的值进行编辑。</span><span class="sxs-lookup"><span data-stu-id="e41a1-106">Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
 
+      <span data-ttu-id="e41a1-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableDataValueEditing
+    fullName: enableDataValueEditing
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableDataValueEditing?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableData.filterHierarchies
+    summary: |-
+      <span data-ttu-id="e41a1-108">数据透视表的筛选器透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="e41a1-108">The Filter Pivot Hierarchies of the PivotTable.</span></span>
 
-    <span data-ttu-id="d58d9-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: dataHierarchies
-  fullName: dataHierarchies
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'dataHierarchies?: Excel.Interfaces.DataPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.DataPivotHierarchyData[]
-- uid: excel.Excel.Interfaces.PivotTableData.enableDataValueEditing
-  summary: >-
-    <span data-ttu-id="d58d9-106">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="d58d9-106">True if the PivotTable should use custom lists when sorting.</span></span>
+      <span data-ttu-id="e41a1-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: filterHierarchies
+    fullName: filterHierarchies
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'filterHierarchies?: Excel.Interfaces.FilterPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.FilterPivotHierarchyData[]'
+  - uid: excel.Excel.Interfaces.PivotTableData.hierarchies
+    summary: |-
+      <span data-ttu-id="e41a1-110">数据透视表的透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="e41a1-110">The Pivot Hierarchies of the PivotTable.</span></span>
 
+      <span data-ttu-id="e41a1-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: hierarchies
+    fullName: hierarchies
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'hierarchies?: Excel.Interfaces.PivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.PivotHierarchyData[]'
+  - uid: excel.Excel.Interfaces.PivotTableData.id
+    summary: |-
+      <span data-ttu-id="e41a1-112">数据透视表的 ID。</span><span class="sxs-lookup"><span data-stu-id="e41a1-112">Id of the PivotTable.</span></span> <span data-ttu-id="e41a1-113">只读。</span><span class="sxs-lookup"><span data-stu-id="e41a1-113">Read-only.</span></span>
 
-    <span data-ttu-id="d58d9-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableDataValueEditing
-  fullName: enableDataValueEditing
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableDataValueEditing?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableData.filterHierarchies
-  summary: >-
-    <span data-ttu-id="d58d9-108">数据透视表的筛选器透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="d58d9-108">The Filter Pivot Hierarchies of the PivotTable.</span></span>
+      <span data-ttu-id="e41a1-114">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-114">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.PivotTableData.name
+    summary: |-
+      <span data-ttu-id="e41a1-115">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="e41a1-115">Name of the PivotTable.</span></span>
 
+      <span data-ttu-id="e41a1-116">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.PivotTableData.rowHierarchies
+    summary: |-
+      <span data-ttu-id="e41a1-117">数据透视表的行透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="e41a1-117">The Row Pivot Hierarchies of the PivotTable.</span></span>
 
-    <span data-ttu-id="d58d9-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: filterHierarchies
-  fullName: filterHierarchies
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'filterHierarchies?: Excel.Interfaces.FilterPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.FilterPivotHierarchyData[]
-- uid: excel.Excel.Interfaces.PivotTableData.hierarchies
-  summary: >-
-    <span data-ttu-id="d58d9-110">数据透视表的透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="d58d9-110">The Pivot Hierarchies of the PivotTable.</span></span>
+      <span data-ttu-id="e41a1-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: rowHierarchies
+    fullName: rowHierarchies
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'rowHierarchies?: Excel.Interfaces.RowColumnPivotHierarchyData[];'
+      return:
+        type:
+          - 'Excel.Interfaces.RowColumnPivotHierarchyData[]'
+  - uid: excel.Excel.Interfaces.PivotTableData.useCustomSortLists
+    summary: |-
+      <span data-ttu-id="e41a1-119">指定在排序时, 数据透视表是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="e41a1-119">Specifies whether the PivotTable uses custom lists when sorting.</span></span>
 
-
-    <span data-ttu-id="d58d9-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: hierarchies
-  fullName: hierarchies
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'hierarchies?: Excel.Interfaces.PivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.PivotHierarchyData[]
-- uid: excel.Excel.Interfaces.PivotTableData.id
-  summary: >-
-    <span data-ttu-id="d58d9-p101">数据透视表的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="d58d9-p101">Id of the PivotTable. Read-only.</span></span>
-
-
-    <span data-ttu-id="d58d9-114">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-114">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.PivotTableData.name
-  summary: >-
-    <span data-ttu-id="d58d9-115">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="d58d9-115">Name of the PivotTable.</span></span>
-
-
-    <span data-ttu-id="d58d9-116">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-116">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.PivotTableData.rowHierarchies
-  summary: >-
-    <span data-ttu-id="d58d9-117">数据透视表的行透视层级结构。</span><span class="sxs-lookup"><span data-stu-id="d58d9-117">The Row Pivot Hierarchies of the PivotTable.</span></span>
-
-
-    <span data-ttu-id="d58d9-118">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-118">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: rowHierarchies
-  fullName: rowHierarchies
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'rowHierarchies?: Excel.Interfaces.RowColumnPivotHierarchyData[];'
-    return:
-      type:
-      - Excel.Interfaces.RowColumnPivotHierarchyData[]
-- uid: excel.Excel.Interfaces.PivotTableData.useCustomSortLists
-  summary: >-
-    <span data-ttu-id="d58d9-119">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="d58d9-119">True if the PivotTable should use custom lists when sorting.</span></span>
-
-
-    <span data-ttu-id="d58d9-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d58d9-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: useCustomSortLists
-  fullName: useCustomSortLists
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'useCustomSortLists?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="e41a1-120">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e41a1-120">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: useCustomSortLists
+    fullName: useCustomSortLists
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useCustomSortLists?: boolean;'
+      return:
+        type:
+          - boolean
