--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottableloadoptions.yml
@@ -1,137 +1,124 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b5abc40883f6c3bc552330f0e1bd3e92e0c68f0e
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30095707"
 items:
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions
-  summary: >-
-    <span data-ttu-id="c28db-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="c28db-101">Represents an Excel PivotTable.</span></span>
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions
+    summary: |-
+      <span data-ttu-id="fcdff-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="fcdff-101">Represents an Excel PivotTable.</span></span>
 
+      <span data-ttu-id="fcdff-102">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.PivotTableLoadOptions
+    fullName: Excel.Interfaces.PivotTableLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableLoadOptions.$all
+      - excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
+      - excel.Excel.Interfaces.PivotTableLoadOptions.id
+      - excel.Excel.Interfaces.PivotTableLoadOptions.layout
+      - excel.Excel.Interfaces.PivotTableLoadOptions.name
+      - excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
+      - excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
+    summary: |-
+      <span data-ttu-id="fcdff-103">指定数据透视表是否允许用户对数据正文中的值进行编辑。</span><span class="sxs-lookup"><span data-stu-id="fcdff-103">Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
 
-    <span data-ttu-id="c28db-102">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-102">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.PivotTableLoadOptions
-  fullName: Excel.Interfaces.PivotTableLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableLoadOptions.$all
-  - excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
-  - excel.Excel.Interfaces.PivotTableLoadOptions.id
-  - excel.Excel.Interfaces.PivotTableLoadOptions.layout
-  - excel.Excel.Interfaces.PivotTableLoadOptions.name
-  - excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
-  - excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.enableDataValueEditing
-  summary: >-
-    <span data-ttu-id="c28db-103">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="c28db-103">True if the PivotTable should use custom lists when sorting.</span></span>
+      <span data-ttu-id="fcdff-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableDataValueEditing
+    fullName: enableDataValueEditing
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableDataValueEditing?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.id
+    summary: |-
+      <span data-ttu-id="fcdff-105">数据透视表的 ID。</span><span class="sxs-lookup"><span data-stu-id="fcdff-105">Id of the PivotTable.</span></span> <span data-ttu-id="fcdff-106">只读。</span><span class="sxs-lookup"><span data-stu-id="fcdff-106">Read-only.</span></span>
 
+      <span data-ttu-id="fcdff-107">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-107">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: id
+    fullName: id
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'id?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.layout
+    summary: |-
+      <span data-ttu-id="fcdff-108">PivotLayout，用于说明数据透视表的布局和可视化结构。</span><span class="sxs-lookup"><span data-stu-id="fcdff-108">The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
 
-    <span data-ttu-id="c28db-104">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-104">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableDataValueEditing
-  fullName: enableDataValueEditing
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableDataValueEditing?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.id
-  summary: >-
-    <span data-ttu-id="c28db-p101">数据透视表的 ID。只读。</span><span class="sxs-lookup"><span data-stu-id="c28db-p101">Id of the PivotTable. Read-only.</span></span>
+      <span data-ttu-id="fcdff-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: layout
+    fullName: layout
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.PivotLayoutLoadOptions
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.name
+    summary: |-
+      <span data-ttu-id="fcdff-110">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="fcdff-110">Name of the PivotTable.</span></span>
 
+      <span data-ttu-id="fcdff-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
+    summary: |-
+      <span data-ttu-id="fcdff-112">指定在排序时, 数据透视表是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="fcdff-112">Specifies whether the PivotTable uses custom lists when sorting.</span></span>
 
-    <span data-ttu-id="c28db-107">\[[API 集: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-107">\[ [API set: ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: id
-  fullName: id
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'id?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.layout
-  summary: >-
-    <span data-ttu-id="c28db-108">PivotLayout，用于说明数据透视表的布局和可视化结构。</span><span class="sxs-lookup"><span data-stu-id="c28db-108">The PivotLayout describing the layout and visual structure of the PivotTable.</span></span>
+      <span data-ttu-id="fcdff-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: useCustomSortLists
+    fullName: useCustomSortLists
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useCustomSortLists?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
+    summary: |-
+      <span data-ttu-id="fcdff-114">包含当前 PivotTable 对象的工作表。</span><span class="sxs-lookup"><span data-stu-id="fcdff-114">The worksheet containing the current PivotTable.</span></span>
 
-
-    <span data-ttu-id="c28db-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: layout
-  fullName: layout
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'layout?: Excel.Interfaces.PivotLayoutLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.PivotLayoutLoadOptions
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.name
-  summary: >-
-    <span data-ttu-id="c28db-110">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="c28db-110">Name of the PivotTable.</span></span>
-
-
-    <span data-ttu-id="c28db-111">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-111">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.useCustomSortLists
-  summary: >-
-    <span data-ttu-id="c28db-112">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="c28db-112">True if the PivotTable should use custom lists when sorting.</span></span>
-
-
-    <span data-ttu-id="c28db-113">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-113">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: useCustomSortLists
-  fullName: useCustomSortLists
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'useCustomSortLists?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableLoadOptions.worksheet
-  summary: >-
-    <span data-ttu-id="c28db-114">包含当前数据透视表的工作表。</span><span class="sxs-lookup"><span data-stu-id="c28db-114">The worksheet containing the current PivotTable.</span></span>
-
-
-    <span data-ttu-id="c28db-115">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c28db-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: worksheet
-  fullName: worksheet
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.WorksheetLoadOptions
+      <span data-ttu-id="fcdff-115">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fcdff-115">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: worksheet
+    fullName: worksheet
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.WorksheetLoadOptions
