--- a/docs/docs-ref-autogen/excel/excel.interfaces.pivottableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.pivottableupdatedata.yml
@@ -1,70 +1,61 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7f7b055a98142ad70e3a5a0744e3ded4a2dfa50d
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094972"
 items:
-- uid: excel.Excel.Interfaces.PivotTableUpdateData
-  summary: <span data-ttu-id="46baf-101">用于更新数据透视表对象上的数据的接口, 用于在 "数据透视表<!-- -->" 中使用。<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="46baf-101">An interface for updating data on the PivotTable object, for use in "pivotTable.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.PivotTableUpdateData
-  fullName: Excel.Interfaces.PivotTableUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel
-  children:
-  - excel.Excel.Interfaces.PivotTableUpdateData.enableDataValueEditing
-  - excel.Excel.Interfaces.PivotTableUpdateData.name
-  - excel.Excel.Interfaces.PivotTableUpdateData.useCustomSortLists
-- uid: excel.Excel.Interfaces.PivotTableUpdateData.enableDataValueEditing
-  summary: >-
-    <span data-ttu-id="46baf-102">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="46baf-102">True if the PivotTable should use custom lists when sorting.</span></span>
+  - uid: excel.Excel.Interfaces.PivotTableUpdateData
+    summary: '<span data-ttu-id="0cd48-101">用于更新数据透视表对象上的数据的接口, 可用于 "数据透视表"。 set (</span><span class="sxs-lookup"><span data-stu-id="0cd48-101">An interface for updating data on the PivotTable object, for use in "pivotTable.set(</span></span><!-- --><span data-ttu-id="0cd48-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="0cd48-102"></span></span><!-- --><span data-ttu-id="0cd48-103">)".</span><span class="sxs-lookup"><span data-stu-id="0cd48-103"></span></span>'
+    name: Excel.Interfaces.PivotTableUpdateData
+    fullName: Excel.Interfaces.PivotTableUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel
+    children:
+      - excel.Excel.Interfaces.PivotTableUpdateData.enableDataValueEditing
+      - excel.Excel.Interfaces.PivotTableUpdateData.name
+      - excel.Excel.Interfaces.PivotTableUpdateData.useCustomSortLists
+  - uid: excel.Excel.Interfaces.PivotTableUpdateData.enableDataValueEditing
+    summary: |-
+      <span data-ttu-id="0cd48-104">指定数据透视表是否允许用户对数据正文中的值进行编辑。</span><span class="sxs-lookup"><span data-stu-id="0cd48-104">Specifies whether the PivotTable allows values in the data body to be edited by the user.</span></span>
 
+      <span data-ttu-id="0cd48-105">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0cd48-105">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: enableDataValueEditing
+    fullName: enableDataValueEditing
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableDataValueEditing?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel.Excel.Interfaces.PivotTableUpdateData.name
+    summary: |-
+      <span data-ttu-id="0cd48-106">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="0cd48-106">Name of the PivotTable.</span></span>
 
-    <span data-ttu-id="46baf-103">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46baf-103">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: enableDataValueEditing
-  fullName: enableDataValueEditing
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableDataValueEditing?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel.Excel.Interfaces.PivotTableUpdateData.name
-  summary: >-
-    <span data-ttu-id="46baf-104">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="46baf-104">Name of the PivotTable.</span></span>
+      <span data-ttu-id="0cd48-107">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0cd48-107">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel.Excel.Interfaces.PivotTableUpdateData.useCustomSortLists
+    summary: |-
+      <span data-ttu-id="0cd48-108">指定在排序时, 数据透视表是否使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="0cd48-108">Specifies whether the PivotTable uses custom lists when sorting.</span></span>
 
-
-    <span data-ttu-id="46baf-105">\[[API 集: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46baf-105">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel.Excel.Interfaces.PivotTableUpdateData.useCustomSortLists
-  summary: >-
-    <span data-ttu-id="46baf-106">如此如果数据透视表在排序时应使用自定义列表。</span><span class="sxs-lookup"><span data-stu-id="46baf-106">True if the PivotTable should use custom lists when sorting.</span></span>
-
-
-    <span data-ttu-id="46baf-107">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="46baf-107">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  isPreview: true
-  name: useCustomSortLists
-  fullName: useCustomSortLists
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'useCustomSortLists?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="0cd48-109">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="0cd48-109">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    isPreview: true
+    name: useCustomSortLists
+    fullName: useCustomSortLists
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'useCustomSortLists?: boolean;'
+      return:
+        type:
+          - boolean
